compiler/testData/diagnostics/testsWithStdLib/inference/kt36951.fir.kt
// !JAVAC_EXPECTED_FILE
// !LANGUAGE: +NewInference
// !DIAGNOSTICS: -UNUSED_PARAMETER

class Base<T : T> : HashSet<T>() {
    fun foo() {
        super.remove(<!ARGUMENT_TYPE_MISMATCH!>""<!>)
    }
}
